--- a/kayako-helper/package.json
+++ b/kayako-helper/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/chrome": "^0.0.326",
+    "@types/node": "^22.15.30",
+    "typescript": "^5.8.3",
     "vite": "^6.3.5"
   }
 }
