--- a/kayako-helper/package.json
+++ b/kayako-helper/package.json
@@ -13,5 +13,8 @@
     "@types/node": "^22.15.30",
     "typescript": "^5.8.3",
     "vite": "^6.3.5"
+  },
+  "dependencies": {
+    "sanitize-html": "^2.17.0"
   }
 }
