--- a/kayako-helper/tsconfig.json
+++ b/kayako-helper/tsconfig.json
@@ -23,6 +23,7 @@
   "include": [
     "src",
     "vite.config.ts",
+    "popup",
     "../../../../../Program Files/JetBrains/WebStorm2023.3/plugins/javascript-impl/jsLanguageServicesImpl/external/lib.es5.d.ts"
   ]
 }
