--- a/kayako-helper/package.json
+++ b/kayako-helper/package.json
@@ -4,15 +4,23 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build-selectors": "node ./src/selectors/build-selectors.mjs",
+    "watch-selectors": "nodemon --watch src/selectors/selectors.json --exec \"npm run build-selectors\" -q",
+    "vite-dev": "vite dev",
+    "dev": "npm-run-all --parallel watch-selectors vite-dev",
+    "build": "npm run build-selectors && vite build",
+    "lint": "eslint . --ext .ts,.tsx,.js,.jsx --fix"
   },
   "devDependencies": {
     "@types/chrome": "^0.0.326",
     "@types/node": "^22.15.30",
+    "nodemon": "^3.1.10",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^3.3.1",
+    "sass": "^1.89.2",
     "typescript": "^5.8.3",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vite-plugin-static-copy": "^3.0.0"
   },
   "dependencies": {
     "sanitize-html": "^2.17.0"
