--- a/kayako-helper/manifest.json
+++ b/kayako-helper/manifest.json
@@ -18,18 +18,27 @@
       "matches": [
         "https://*.kayako.com/*"
       ],
-      "js": ["dist/content.js"],
+      "js": ["dist/contentKayako.js"],
       "css": ["dist/content.css"],
+      "run_at": "document_idle"
+    },
+    {
+      "matches": ["https://gemini.google.com/*"],
+      "js": ["dist/contentGemini.js"],
       "run_at": "document_idle"
     }
   ],
 
   "background": {
-    "service_worker": "dist/background.js"
+    "service_worker": "dist/background.js",
+    "type": "module"
   },
 
   "host_permissions": [
-    "https://*.kayako.com/*"
+    "https://*.kayako.com/*",
+    "https://push.clients6.google.com/*",
+    "https://content-push.googleapis.com/upload/",
+    "https://gemini.google.com/*"
   ],
 
   "permissions": [
