--- a/kayako-helper/package.json
+++ b/kayako-helper/package.json
@@ -23,6 +23,7 @@
     "vite-plugin-static-copy": "^3.0.0"
   },
   "dependencies": {
+    "jszip": "^3.10.1",
     "sanitize-html": "^2.17.0"
   }
 }
