--- a/kayako-helper/manifest.json
+++ b/kayako-helper/manifest.json
@@ -24,12 +24,6 @@
       "type": "module"
     },
     {
-      "matches": ["https://*.ephor.ai/*", "https://ephor.ai/*"],
-      "js": ["dist/clerkTokenBridge.js"],
-      "run_at": "document_start",
-      "type": "module"
-    },
-    {
       "matches": ["https://*.kayako.com/*"],
       "js": ["dist/contentKayako.js"],
       "css": ["dist/content.css"],
@@ -95,7 +89,7 @@
 
   "web_accessible_resources": [
     {
-      "resources": ["dist/*", "images/*"],
+      "resources": ["dist/*"],
       "matches": [
         "https://*.kayako.com/*",
         "https://*.chatgpt.com/*",
